<resources>
    <string name="app_name">RionegroTurismo</string>
    <string name="titulo">Rionegro</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="iniciar">Iniciar</string>
    <string name="registrese">Regístrese</string>
    <string name="repitpassword">Repetir contraseña</string>
    <string name="email">Correo electrónico</string>
    <string name="cancel">Cancelar</string>
    <string name="register">Registro</string>
    <string name="miperfil">Mi perfil</string>
    <string name="cerrar">Cerrar sesión</string>
    <string name="principal">Principal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotel1">Hotel Santiago de Arma</string>
    <string name="hotel2">Hotel Boutique el Cortijo de la Riviera</string>
    <string name="title_activity_hoteles">HotelesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hotel3">Hotel Bosques del Llano</string>
    <string name="title_activity_restaurantes">RestaurantesActivity</string>
    <string name="Restaurante1">Restaurante El Rancherito</string>
    <string name="Restaurante2">Restaurante Raffaello\'s pizza</string>
    <string name="Restaurante3">Restaurante Di Vino</string>
    <string name="title_activity_bares">BaresActivity</string>
    <string name="bar1">Café-Bar El Hato</string>
    <string name="bar2">Bar Shot House</string>
    <string name="bar3">Bar Don Gatto</string>
    <string name="parque1">Parque de la libertad</string>
    <string name="descrip">Parque para visitar en familia</string>
    <string name="direccion">Cr 30 AA 45</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="parque2">Parque Tutucán</string>
    <string name="parque3">Parque San Francisco</string>
    <string name="parque4">Parque San Antonio</string>
    <string name="title_activity_maps">Map</string>
</resources>
