<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.rionegroturismo.RegistroActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="25sp"
        android:gravity="center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tutu"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textSize="15sp"
        android:gravity="center"
        android:id="@+id/eRUsername"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="15sp"
        android:gravity="center"
        android:id="@+id/eRContrasena"
        android:inputType="textPassword"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repitpassword"
        android:textSize="15sp"
        android:gravity="center"
        android:id="@+id/eRRepContrasena"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="15sp"
        android:gravity="center"
        android:id="@+id/eRCorreo"
        android:inputType="textEmailAddress"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center">

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/registrese"
           android:textSize="10sp"
           android:layout_gravity="center"
           android:id="@+id/bRegistrar"/>

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/cancel"
           android:textSize="10sp"
           android:layout_gravity="center"
           android:id="@+id/bCancelar"/>

   </LinearLayout>

</LinearLayout>
