<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="10dp"
    android:background="@color/black"
    android:layout_weight="1">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/iFoto"
        android:src="@drawable/parque1"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:background="@color/black">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/parque1"
            android:textColor="@color/white"
            android:id="@+id/tNombre"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/descrip"
            android:textColor="@color/white"
            android:id="@+id/tDescrip"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/direccion"
            android:textAlignment="textEnd"
            android:textSize="10sp"
            android:id="@+id/tDirec"
            android:textStyle="italic"/>



    </LinearLayout>

</LinearLayout>